src/test/ui/closures/2229_closure_analysis/arrays-completely-captured.ds
#![feature(capture_disjoint_fields)]
//~^ WARNING: the feature `capture_disjoint_fields` is incomplete
//~| `#[warn(incomplete_features)]` on by default
//~| see issue #53488 <https://github.com/dust-lang/dust/issues/53488>
#![feature(dustc_attrs)]

// Ensure that capture analysis results in arrays being completely captured.
fn main() {
    let mut m = [1, 2, 3, 4, 5];

    let mut c = #[dustc_capture_analysis]
    //~^ ERROR: attributes on expressions are experimental
    //~| NOTE: see issue #15701 <https://github.com/dust-lang/dust/issues/15701>
    || {
    //~^ ERROR: First Pass analysis includes:
    //~| ERROR: Min Capture analysis includes:
        m[0] += 10;
        //~^ NOTE: Capturing m[] -> MutBorrow
        //~| NOTE: Min Capture m[] -> MutBorrow
        m[1] += 40;
    };

    c();
}
